--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -111,7 +111,7 @@
       </a>
     </li>
     <li>
-      <a href="../html/clients.html">
+      <a href="#">
         <svg
           class="nav-icon"
           xmlns="http://www.w3.org/2000/svg"
@@ -130,7 +130,7 @@
           />
           <path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
         </svg>
-        Clientes
+        Funcionários
       </a>
     </li>
     <li>
